2014-04-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_binding): Melt the binding and unbinding code,
	which are very similar, into a single function.
	* src/rcfile.c (parse_binding): Uppercase only the first two or three
	characters of the key name, in order to preserve ^Space and M-Space,
	so they can be unbound.  Fixes Savannah bug #41940.
	* doc/syntax/go.nanorc: Extend the syntax highlighting for Go lang,
	from the submission by Robert Clausecker <fuzxxl@Savannah>.

2014-04-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/{proto.h,global.c,text.c}: Keep a pointer to the Uncut item in
	the functions list, to be able to change its description to Unjustify
	at the appropriate moment.  This avoids having to fully repopulate
	the functions and shortcuts lists before and after every Justify.
	Also, look for ^U only in the main menu, to which ^W M-J factually
	returns and which shortcut_init() "sneakily" sets.
	* src/{proto.h,files.c,global.c,nano.c,rcfile.c}: Drop the obsolete
	argument of shortcut_init(), and remove two unneeded calls of it.
	* src/global.c (shortcut_init): Allow M-J after an --enable-justify.
	* src/rcfile.c (parse_rcfile): The user documentation only speaks
	of options, not of flags.  Make the error messages conform.
	* src/rcfile.c (check_vitals_mapped): Improve layout of message.

2014-04-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Limit M-T (cut-till-end-of-file) to
	the main menu, and M-J (full-justify) to the main and search menus.
	* src/proto.h: There is no need for the helpline tags to be external,
	they are only ever used in src/global.c.
	* src/global.c: Do not set any helpline tags to empty strings;
	compilation should fail if they are needed and not defined.

2014-04-05  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (version): Print the correct configuration options.
	* src/{chars.c,nano.c,text.c}: Cosmetic tweaks.