@@ -2595,11 +2595,14 @@ int main(int argc, char **argv)
 	matchbrackets = mallocstrcpy(NULL, "(<[{)>]}");
 
 #ifdef ENABLE_NANORC
-    /* If whitespace wasn't specified, set its default value. */
+    /* If whitespace wasn't specified, set its default value.  If we're
+     * using UTF-8, it's Unicode 00BB (Right-Pointing Double Angle
+     * Quotation Mark) and Unicode 00B7 (Middle Dot).  Otherwise, it's
+     * ">" and ".". */
     if (whitespace == NULL) {
 #ifdef ENABLE_UTF8
 	if (using_utf8()) {
-	    whitespace = mallocstrcpy(NULL, "»·");
+	    whitespace = mallocstrcpy(NULL, "\xC2\xBB\xC2\xB7");
 	    whitespace_len[0] = 2;
 	    whitespace_len[1] = 2;
 	} else
